--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "description": "A Docker image to seed a Mongo database",
   "scripts": {
-    "start": "docker build -t fvilers/mongo-seed ."
+    "start": "docker run fvilers/mongo-seed",
+    "build": "docker build -t fvilers/mongo-seed ."
   },
   "repository": {
     "type": "git",
